[gd_scene load_steps=4 format=3 uid="uid://bcsoofaq512km"]

[ext_resource type="Script" uid="uid://co7ox8wx1s42e" path="res://Scripts/UI/Game/ScoresUI/enemies_count.gd" id="1_jcy05"]

[sub_resource type="LabelSettings" id="LabelSettings_ue6t0"]
font_size = 23

[sub_resource type="LabelSettings" id="LabelSettings_jcy05"]
font_size = 23

[node name="EnemiesCount" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jcy05")

[node name="enemies_alived" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 48.0
offset_right = 213.0
offset_bottom = 80.0
text = "Enemies alived : 0"
label_settings = SubResource("LabelSettings_ue6t0")
vertical_alignment = 1

[node name="enemies_killed" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 207.0
offset_bottom = 48.0
text = "Enemies killed : 0"
label_settings = SubResource("LabelSettings_jcy05")
vertical_alignment = 1
